[package]
name = "reelpath"
version = "1.2.2"
authors = ["Nick Gerace <nickagerace@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "CLI tool that prints the absolute path for a given file or directory."
homepage = "https://nickgerace.dev"
repository = "https://github.com/nickgerace/reelpath/"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities", "command-line-interface"]
